--- a/static/css/search_results.scss
+++ b/static/css/search_results.scss
@@ -142,7 +142,7 @@
   float: right;
   font-size: 14px;
   font-weight: 100;
-  margin-top: -110px;
+  padding-left: 5px;
   width: 151px;
   font-weight:bold;
 }
